# Shadow-Messenger-Master

./: .banner  .gitignore  README.md  Shadow-Messenger-Master.py  poetry_scripts.py  pyproject.toml  requirements.txt  user_data.db
shadowmessenger/: __main__.py  config.py  encryption.py  interfaces.py  master.py  messaging.py  protocol.py
shadowmsg/: __init__.py  __main__.py  application.py  banner.py  database.py  encryption.py  network.py  protocol.py  user_input.py
src/: Shadow-Messenger-Master-rev.py
test/: Shadow-Messenger-Master6.py  Shadow-Messenger-Master7.py  shared_key.key  user_data.db
tests/: test_database_manager.py  test_encryption_handler.py  test_file_key_storage.py  test_key_exchange.py  test_protocol_message.py  test_utilities.py
