[tool.poetry]
name = "shadowmsg"
version = "0.1.1"
description = ""
authors = ["DJ Stomp & Shadowdrums"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pycryptodome = "^3.20.0"
homegrowndhe = "^0.3.3"
appdirs = ">=1.4.4,<1.5.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"